added a timer, put the splash screen on a timer, added AABB Collision Detection

--- a/ImNotAWrapper/ImNotAWrapper.vcxproj
+++ b/ImNotAWrapper/ImNotAWrapper.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="PhysicsManager.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Render.h" />
     <ClInclude Include="TransformComponent.h" />
   </ItemGroup>
@@ -205,6 +206,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="PhysicsManager.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="Render.cpp" />
     <ClCompile Include="TransformComponent.cpp" />
   </ItemGroup>
